# student_portal

backend/: alembic.ini  conftest.py  pyproject.toml  pyproject.toml   # Edit to add dependencies: fastapi, httpx, and pytest-asyncio  pytest.ini
backend/app/: celery_app.py  main.py
backend/app/auth/: deps.py  models.py  router.py  schemas.py  security.py
backend/app/core/: config.py  database.py  limiter.py  storage.py
backend/app/email/: __init__.py  router.py  service.py  tasks.py
backend/app/forum/: models.py  router.py  schemas.py
backend/app/media/: models.py  router.py  run_worker.py  schemas.py  tasks.py
backend/app/notifications/: __init__.py  router.py
backend/app/users/: router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 00d9e0dd081f_fix_tablename_change.py  03b73bc9013b_fix_change_table_name.py  094aa01731a4_forum_tables.py  4878a8db9bfd_fix_models_extend_existing.py  4afff5d00952_manual_post_likes_sync.py  4e5af9c65e60_debug2.py  4e85a0b9c87c_add_created_at_default.py  5da88d388f41_fix_primary_key_in_models.py  9e5ea20e6d47_add_refresh_token_table.py  a730f0e9380e_media_table.py  a8af7d8a7b22_fix_change_table_name2.py  b29da9483eff_add_profile_fields_to_user.py  b6cf2ee0ab8c_add_refresh_token_table.py  cad07fe7563f_create_comment_table.py  cb51c3ecf058_create_forum_tables.py  cfc34d448b47_email_token_table.py  d32b4a3d667c_change_table_name_user_to_users.py  da4b801012f4_fix_refresh_token_model.py
backend/tests/: test_auth.py  test_email_flows.py  test_email_simple.py  test_forum.py  test_hello_world.py  # New file: a basic "hello world" test  test_logout.py  test_media.py  test_post_like.py  test_rate_limit.py  test_refresh.py  test_storage.py  test_users.py
frontend/: package-lock.json  package.json  vite.config.js
